# slopguard

./: .dockerignore  .env.prod.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Caddyfile  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  render.yaml
.github/: dependabot.yml
.github/workflows/: codeql.yml  saas-ci.yml  slopguard-ci.yml  slopguard-release.yml
apps/api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py
apps/api/app/: __init__.py  logging_config.py  main.py  middleware.py  request_context.py  settings.py
apps/api/app/api/: __init__.py  auth.py  health.py  installations.py  me.py  scans.py  webhooks.py
apps/api/app/auth/: __init__.py  deps.py  guard.py  session.py  state_store.py  user_repo.py
apps/api/app/db/: __init__.py  base.py  models.py
apps/api/app/github_app/: __init__.py  contents_client.py  deps.py  events.py  installation_repo.py  token_client.py
apps/api/app/scans/: scan_repo.py
apps/api/app/schemas/: __init__.py  scan.py  scan_request.py
apps/api/app/security/: __init__.py  crypto.py  rate_limit.py  rate_limit_deps.py  webhook_signature.py
apps/api/app/services/: __init__.py  github.py  scan.py  scan_mapper.py
apps/api/app/worker/: __init__.py  deps.py  github_pr.py  jobs.py  main.py  manifests.py  pr_scan.py
apps/api/scripts/: seed_e2e_session.py
apps/api/tests/: conftest.py  test_auth_acceptance.py  test_auth_deps.py  test_auth_oauth.py  test_auth_stores.py  test_contents_full_name_ssrf.py  test_crypto.py  test_github_app_acceptance.py  test_github_oauth_client.py  test_health.py  test_health_probes.py  test_installation_token.py  test_logging_observability.py  test_migration.py  test_models.py  test_pr_scan_worker.py  test_pr_webhook_dispatch.py  test_rate_limit.py  test_scan_dto.py  test_scan_endpoint.py  test_scan_history_endpoint.py  test_scan_history_query.py  test_scan_isolation.py  test_scan_limits.py  test_scan_ondemand_persist.py  test_scan_repo_source.py  test_scan_service.py  test_scan_service_fail_closed.py  test_session_guard.py  test_settings.py  test_token_no_leak_logout.py  test_user_repo.py  test_webhook_github.py  test_webhook_signature.py
apps/web/: .env.example  .gitignore  Dockerfile  README.md  eslint.config.mjs  next.config.ts  package.json  vitest.config.ts  vitest.setup.ts
apps/web/e2e/: README.md  auth-guard.spec.ts  global-setup.ts  playwright.config.ts  scan-flow.spec.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/src/lib/: icons.tsx  utils.ts
apps/web/tests/: DependencyRow.test.tsx  ScanReport.test.tsx  ScanSummaryBar.test.tsx  SignalList.test.tsx  SummaryCounts.test.tsx  VerdictBadge.test.tsx  factories.ts  history-page.test.tsx  report-format.test.ts  scan-page.test.tsx  verdict-meta.test.ts
docs/: .gitignore  deploy-vps.md  github-app-permissions.md  runbook-dataset-npm.md  self-host.md  slopguard.tex
docs/adr/: 0001-texto-ecosistema-en-detail-capas-0-2.md
docs/architecture/: detail-ecosistema-flujo.md
eval/: PREREGISTRO.md  run_eval.py
infra/: README.md
infra/terraform/: .gitignore  .terraform.lock.hcl  neon.tf  outputs.tf  providers.tf  terraform.tfvars.example  upstash.tf  variables.tf  vercel.tf  versions.tf
scripts/: build_npm_top_n.py  generate_top_n.py
specs/slopguard-hito1/: design-parte2.md  design-parte3.md  design.md  requirements.md  tasks.md
specs/slopguard-hito2/: design-parte2.md  design.md  requirements.md  tasks.md
specs/slopguard-hito3/: design.md  requirements.md  tasks.md
specs/slopguard-hito4-npm/: design.md  requirements.md  tasks.md
specs/slopguard-hito5-saas/: design.md  requirements.md  tasks.md
src/slopguard/: __init__.py
src/slopguard/cli/: exit_codes.py  main.py  render_human.py  render_json.py
src/slopguard/core/: __init__.py  config.py  engine.py  errors.py  models.py  normalize.py
src/slopguard/core/adapters/: base.py  concurrent.py  npm.py  pypi.py  registry.py
src/slopguard/core/cache/: disk_cache.py
src/slopguard/core/dataset/: npm_top_8k.json  npm_top_8k.sha256  pypi_top_10k.json  pypi_top_10k.sha256  top_n.py
src/slopguard/core/layers/: layer0_existence.py  layer1_similarity.py  layer2_metadata.py  layer3_threatintel.py  layer4_hallucination.py
src/slopguard/core/llm/: __init__.py  anthropic.py  evaluator.py  prompt.py  registry.py  resolver.py
src/slopguard/core/manifests/: base.py  detect.py  includes.py  package_json.py  pip_freeze.py  pyproject_toml.py  requirements_txt.py
src/slopguard/core/net/: http_client.py  safe_json.py
src/slopguard/core/scoring/: scorer.py  verdict.py
src/slopguard/core/threatintel/: __init__.py  composite.py  osv.py  registry.py  resolver.py  source.py  watchlist.py
tests/: conftest.py  test_adapter.py  test_anti_crlf_validators.py  test_cache.py  test_cli.py  test_concurrent.py  test_config.py  test_dataset.py  test_disk_cache.py  test_disk_cache_blob.py  test_e2e.py  test_engine.py  test_h2_cache_blob.py  test_h2_cli.py  test_h2_composite.py  test_h2_config.py  test_h2_e2e.py  test_h2_engine.py  test_h2_facade.py  test_h2_layer3.py  test_h2_models_source.py  test_h2_net_post.py  test_h2_osv.py  test_h2_resolver.py  test_h2_scoring.py  test_h2_watchlist.py  test_h3_config_antiblock.py  test_h3_eval.py  test_h3_layer4_engine.py  test_h3_llm_evaluator.py  test_h3_render_cli.py  test_h3_scorer_props.py  test_h3_security.py  test_h4_cache_isolation_e2e.py  test_h4_cli_manifest_type.py  test_h4_detect_ecosystem.py  test_h4_ecosystem_selection.py  test_h4_layer1_candidate_filter.py  test_h4_llm_evaluator_ecosystem.py  test_h4_osv_npm.py  (+12 more)
tests/adapters/: test_npm_extract_metadata.py  test_npm_fetch.py  test_npm_name_validation.py  test_npm_normalize.py  test_npm_retryable.py
tests/dataset/: test_npm_top_n.py
tests/layers/: test_layer1_npm.py  test_layers_npm.py
tests/llm/: test_layer4_npm.py
(+29 files in other folders)
