[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slopguard"
version = "0.2.0"
description = "Guardian pre-instalacion contra slopsquatting: detecta dependencias Python alucinadas, typosquatting o maliciosas antes de instalarlas."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "equipo" }]
keywords = ["security", "supply-chain", "slopsquatting", "typosquatting", "pypi", "hallucination"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.11",
  "Topic :: Security",
  "Typing :: Typed",
]
# NFR-Mant.2: cero dependencias de runtime (solo stdlib) para reducir la propia
# superficie de supply-chain de una herramienta de seguridad.
dependencies = []

[project.scripts]
slopguard = "slopguard.cli.main:main"

[project.optional-dependencies]
dev = [
  "mypy>=1.8",
  "ruff>=0.5",
  "pytest>=8",
  "pytest-cov>=5",
  "import-linter>=2",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
slopguard = ["py.typed", "core/dataset/*.json", "core/dataset/*.sha256"]

# --- Calidad: lint (ruff) ---------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
# F=pyflakes, E/W=pycodestyle, I=isort, B=bugbear, S=flake8-bandit (seguridad),
# UP=pyupgrade, PL=pylint, RUF=ruff. S prohibe eval/exec/pickle/marshal (NFR-Seg.1-2).
select = ["E", "W", "F", "I", "B", "S", "UP", "PL", "RUF"]

[tool.ruff.lint.per-file-ignores]
# En tests se permiten asserts (S101) y literales "magicos" (PLR2004).
"tests/**" = ["S101", "PLR2004", "PLR0915", "PLR0913"]

# --- Calidad: tipado estricto (mypy) ---------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true

# --- Pruebas ----------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
# --cov-fail-under=90: piso de cobertura global (NFR-Mant.1, T02/T03).
# Solo activo cuando se pasa --cov (en CI o localmente con el flag explicito).
addopts = "--strict-markers --strict-config"

[tool.coverage.run]
source = ["slopguard"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
# Piso global declarado aqui para que `coverage report` tambien falle si baja.
# El gate de CI lo refuerza con --cov-fail-under=90 en pytest (T03).
fail_under = 90

# Piso de cobertura critica >= 95% para threatintel impuesto en CI via el paso
# 'Cobertura de paquetes criticos (>= 95%)' en .github/workflows/slopguard-ci.yml.
# Verificacion local: pytest tests/ --cov=slopguard.core.threatintel --cov-fail-under=95

# --- Contratos de arquitectura (import-linter) -----------------------------
# Verifican por analisis estatico la frontera de extensibilidad (R10) y el
# desacople core/CLI. Hacen fallar el build si una capa cruza la frontera.
[tool.importlinter]
root_package = "slopguard"

[[tool.importlinter.contracts]]
name = "El core no depende de la CLI (R10.3)"
type = "forbidden"
source_modules = ["slopguard.core"]
forbidden_modules = ["slopguard.cli"]

[[tool.importlinter.contracts]]
name = "Capas y scoring no dependen de PyPI ni de la red (R10.1)"
type = "forbidden"
source_modules = ["slopguard.core.layers", "slopguard.core.scoring"]
forbidden_modules = ["slopguard.core.adapters.pypi", "slopguard.core.net"]

# H2-T15: 3 contratos nuevos de Hito 2 (§1.3 design.md) ----------------------

# (1) Capas y scoring no acceden a la red de threat-intel ni a sus impls (R8.1/R8.3).
#     Advisory vive en core.models (hoja), por lo que no hay excepcion necesaria.
[[tool.importlinter.contracts]]
name = "Capas y scoring no dependen de la red de threat-intel (R8.1/R8.3)"
type = "forbidden"
source_modules = ["slopguard.core.layers", "slopguard.core.scoring"]
forbidden_modules = ["slopguard.core.threatintel", "slopguard.core.net"]

# (2) La interfaz/modelo de fuente (source.py) no conoce el transporte concreto (R8.1).
#     Las impls (osv/watchlist/composite/resolver) si pueden usar net/cache.
[[tool.importlinter.contracts]]
name = "La interfaz de fuente threat-intel no conoce la red (R8.1)"
type = "forbidden"
source_modules = ["slopguard.core.threatintel.source"]
forbidden_modules = ["slopguard.core.net"]

# (3) Capa 3 pura: solo abstraccion + modelos, nunca impls concretas de threat-intel (R8.3).
#     Refuerza el contrato (1) a nivel de submódulo; layer3 recibe ThreatIntelResult ya
#     construido e inyectado por el engine, sin instanciar fuentes.
[[tool.importlinter.contracts]]
name = "Capa 3 pura solo usa la abstraccion de fuente (R8.3)"
type = "forbidden"
source_modules = ["slopguard.core.layers.layer3_threatintel"]
forbidden_modules = [
  "slopguard.core.threatintel.osv",
  "slopguard.core.threatintel.watchlist",
  "slopguard.core.threatintel.composite",
  "slopguard.core.threatintel.resolver",
]
