[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slopguard-api"
version = "0.1.0"
description = "Backend FastAPI del SaaS de SlopGuard (Hito 5): envuelve el motor zero-deps como librería in-process."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "equipo" }]

# Dependencias del SERVICIO (no del motor: el core `slopguard` permanece zero-deps).
# `slopguard` se instala editable desde la raíz del repo (monorepo) — ver README.
dependencies = [
  "slopguard",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
  "alembic>=1.13",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "cryptography>=43",     # AEAD (AES-256-GCM) para cifrado de secretos en reposo (H5-T06, R8.2)
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "httpx>=0.27",          # TestClient de Starlette
  "ruff>=0.4",
  "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

# --- Calidad (espejo del core: tipado estricto + ruff con reglas de seguridad S) ---
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "S", "UP", "ANN", "RUF"]
ignore = ["ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106"]  # assert + secretos SINTÉTICOS de prueba en tests
"alembic/*" = ["ANN", "F401"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = []
exclude = ["alembic/versions/"]

[tool.pytest.ini_options]
addopts = "--strict-markers"
testpaths = ["tests"]
