[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slopguard-api"
version = "0.1.0"
description = "Backend FastAPI del SaaS de SlopGuard (Hito 5): envuelve el motor zero-deps como librería in-process."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "equipo" }]

# Dependencias del SERVICIO (no del motor: el core `slopguard` permanece zero-deps).
# `slopguard` se instala editable desde la raíz del repo (monorepo) — ver README.
dependencies = [
  "slopguard",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
  "alembic>=1.13",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "cryptography>=43",     # AEAD (AES-256-GCM) para cifrado de secretos en reposo (H5-T06, R8.2)
  "httpx>=0.27",          # cliente async para hablar con GitHub OAuth/API (H5-T11)
  "redis>=5",             # state OAuth single-use (GETDEL) + sesión de servidor (H5-T11, ADR-4)
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23", # tests async del flujo OAuth (H5-T11)
  "httpx>=0.27",          # TestClient de Starlette (también dep de runtime, ver arriba)
  "ruff>=0.4",
  "mypy>=1.10",
  "types-redis>=4",       # stubs de tipos de redis para mypy strict
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

# --- Calidad (espejo del core: tipado estricto + ruff con reglas de seguridad S) ---
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "S", "UP", "ANN", "RUF"]
ignore = ["ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106"]  # assert + secretos SINTÉTICOS de prueba en tests
"alembic/*" = ["ANN", "F401"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = []
exclude = ["alembic/versions/"]

[tool.pytest.ini_options]
addopts = "--strict-markers"
testpaths = ["tests"]
# Los tests del flujo OAuth (H5-T11) son corrutinas: pytest-asyncio en modo auto las ejecuta
# sin tener que decorar cada uno con @pytest.mark.asyncio.
asyncio_mode = "auto"
